wk_taa_taaqa/src/objects/Account_X_Reference__c.object
<CustomObject>
    <fields>
        <fullName>X2015_Practice_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Practice Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Practice_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Practice Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Practice_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Practice Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Proforma_Amount__c</fullName>
        <label>2015 Proforma Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Proforma_Count__c</fullName>
        <label>2015 Proforma Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2015_Scan_SaaS_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Scan SaaS Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Scan_SaaS_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Scan SaaS Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Scan_SaaS_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Scan SaaS Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Scan_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Scan Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Scan_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Scan Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Scan_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Scan Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Tax_Authorizations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Tax Authorizations</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Tax_Notebook_Amount__c</fullName>
        <label>2015 Tax Notebook Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Tax_Notebook_Count__c</fullName>
        <label>2015 Tax Notebook Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2015_Tax_Software_Total__c</fullName>
        <formula>X2015_Axcess_Tax_Software__c  +  X2015_Tax_Software_revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2015 Tax Software Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Tax_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Tax Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Tax_Software_revenue__c</fullName>
        <label>2015 Tax Software revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Tax_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Tax Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Tax_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Tax Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Trial_Balance_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Trial Balance Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Trial_Balance_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Trial Balance Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Trial_Balance_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Trial Balance Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_1120S_ELF_Count__c</fullName>
        <label>2016 1120S ELF Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_1120_ELF_Copunt__c</fullName>
        <label>2016 1120 ELF Copunt</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_2015_1040_ELF_Diff__c</fullName>
        <formula>X2016_1040_ELF_Count__c -X2015_1040_ELF_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2016-2015 1040 ELF Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_2015_1040_ELF_PCNT_Diff__c</fullName>
        <formula>IF(X2015_1040_ELF_Count__c &lt;1,0,(X2016_1040_ELF_Count__c - X2015_1040_ELF_Count__c)/X2015_1040_ELF_Count__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2016-2015 1040 ELF PCNT Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2016_AMS_Additional_Discount__c</fullName>
        <label>2016 AMS Additional Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2016_Active_Data_Expiration_Date__c</fullName>
        <label>2016 Active Data Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Active_Data_Software__c</fullName>
        <label>2016 Active Data Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Active_Data_Total__c</fullName>
        <label>2016 Active Data Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Active_Data_Training__c</fullName>
        <label>2016 Active Data Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Additional_Revenue__c</fullName>
        <label>2016 Additional Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Authorizations_Total__c</fullName>
        <formula>X2016_Business_Federal_Amount__c + X2016_Business_State_Amount__c +  X2016_Consolidated_Amount__c +  X2016_Individual_Federal_Amount__c +
 X2016_Individual_State_Amount__c + X2016_Proforma_Amount__c + X2016_Tax_Notebook_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2016 Authorizations Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Document_Expiration_Date__c</fullName>
        <label>2016 Axcess Document Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Document_Software__c</fullName>
        <label>2016 Axcess Document Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Document_Total__c</fullName>
        <label>2016 Axcess Document Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Document_Training__c</fullName>
        <label>2016 Axcess Document Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Practice_Expiration_Date__c</fullName>
        <label>2016 Axcess Practice Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Practice_Software__c</fullName>
        <label>2016 Axcess Practice Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Practice_Total__c</fullName>
        <label>2016 Axcess Practice Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Practice_Training__c</fullName>
        <label>2016 Axcess Practice Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2016 Axcess Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Tax_Expiration_Date__c</fullName>
        <label>2016 Axcess Tax Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Tax_Software__c</fullName>
        <label>2016 Axcess Tax Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Tax_Total__c</fullName>
        <label>2016 Axcess Tax Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Tax_Training__c</fullName>
        <label>2016 Axcess Tax Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Workstream_Expiration_Date__c</fullName>
        <label>2016 Axcess Workstream Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Workstream_Software__c</fullName>
        <label>2016 Axcess Workstream Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Workstream_Total__c</fullName>
        <label>2016 Axcess Workstream Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Axcess_Workstream_Training__c</fullName>
        <label>2016 Axcess Workstream Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Business_Federal_Amount__c</fullName>
        <label>2016 Business Federal Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Business_Federal_Count__c</fullName>
        <label>2016 Business Federal Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Business_Federal_ELF_Count__c</fullName>
        <label>2016 Business Federal ELF Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Business_Federal_Ext_Count__c</fullName>
        <label>2016 Business Federal Ext Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Business_State_Amount__c</fullName>
        <label>2016 Business State Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Business_State_Count__c</fullName>
        <label>2016 Business State Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Business_State_ELF_Count__c</fullName>
        <label>2016 Business State ELF Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Business_State_Ext_Count__c</fullName>
        <label>2016 Business State Ext Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Consolidated_Amount__c</fullName>
        <label>2016 Consolidated Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Consolidated_Count__c</fullName>
        <label>2016 Consolidated Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Corporation_ELF__c</fullName>
        <label>2016 Corporation ELF</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Document_Expiration_date__c</fullName>
        <label>2016 Document Expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Document_OP_Expiration_Date__c</fullName>
        <label>2016 Document OP Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Document_OP_Software__c</fullName>
        <label>2016 Document OP Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Document_OP_Total__c</fullName>
        <label>2016 Document OP Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Document_OP_Training__c</fullName>
        <label>2016 Document OP Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Document_Software__c</fullName>
        <label>2016 Document Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Document_Total__c</fullName>
        <label>2016 Document Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Document_Training__c</fullName>
        <label>2016 Document Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_ELF_Revenue__c</fullName>
        <label>2016 ELF Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_ELF_Total__c</fullName>
        <label>2016 ELF Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Emp_Benefit_Plan_ELF__c</fullName>
        <label>2016 Emp Benefit Plan ELF</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Engagement_Expiration_Date__c</fullName>
        <label>2016 Engagement Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Engagement_Software__c</fullName>
        <label>2016 Engagement Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Engagement_Total__c</fullName>
        <label>2016 Engagement Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Engagement_Training__c</fullName>
        <label>2016 Engagement Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Federal_Specialty_ELF_Count__c</fullName>
        <label>2016 Federal Specialty ELF Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Federal_Specialty_Ext_Count__c</fullName>
        <label>2016 Federal Specialty Ext Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Fiduciary_ELF__c</fullName>
        <label>2016 Fiduciary ELF</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Fixed_Assets_Expiration_Date__c</fullName>
        <label>2016 Fixed Assets Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Fixed_Assets_Manager_Software__c</fullName>
        <label>2016 Fixed Assets Manager Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Fixed_Assets_Manager_Total__c</fullName>
        <label>2016 Fixed Assets Manager Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Fixed_Assets_Manager_Training__c</fullName>
        <label>2016 Fixed Assets Manager Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Fixed_Assets_Software__c</fullName>
        <label>2016 Fixed Assets Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Fixed_Assets_Total__c</fullName>
        <label>2016 Fixed Assets Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Fixed_Assets_Training__c</fullName>
        <label>2016 Fixed Assets Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_GFX_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2016 GFX Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2016_Globalfx_Total__c</fullName>
        <label>2016 Globalfx Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Individual_ELF__c</fullName>
        <label>2016 Individual ELF</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Individual_Ext_2688_ELF__c</fullName>
        <label>2016 Individual Ext 2688 ELF</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Individual_Ext_4868_ELF__c</fullName>
        <label>2016 Individual Ext 4868 ELF</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Individual_Federal_Amount__c</fullName>
        <label>2016 Individual Federal Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Individual_Federal_Count__c</fullName>
        <label>2016 Individual Federal Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Individual_Federal_ELF_Count__c</fullName>
        <label>2016 Individual Federal ELF Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Individual_Federal_Ext_Count__c</fullName>
        <label>2016 Individual Federal Ext Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Individual_State_Amount__c</fullName>
        <label>2016 Individual State Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Individual_State_Count__c</fullName>
        <label>2016 Individual State Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Individual_State_ELF_Count__c</fullName>
        <label>2016 Individual State ELF Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Individual_State_Ext_Count__c</fullName>
        <label>2016 Individual State Ext Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_KCN_OP_Software__c</fullName>
        <label>2016 KCN OP Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_KCN_OP_Total__c</fullName>
        <label>2016 KCN OP Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_KCN_OP_Training__c</fullName>
        <label>2016 KCN OP Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_KCN_SaaS_Software__c</fullName>
        <label>2016 KCN SaaS Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_KCN_SaaS_Total__c</fullName>
        <label>2016 KCN SaaS Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_KCN_SaaS_Training__c</fullName>
        <label>2016 KCN SaaS Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_KConnect_OP_Expiration_Date__c</fullName>
        <label>2016 KConnect OP Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_KConnect_SaaS_Expiration_Date__c</fullName>
        <label>2016 KConnect SaaS Expiration D</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Knowledge_Coach_Expiration_Date__c</fullName>
        <label>2016 Knowledge Coach Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Knowledge_Coach_Software__c</fullName>
        <label>2016 Knowledge Coach Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Knowledge_Coach_Total__c</fullName>
        <label>2016 Knowledge Coach Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Knowledge_Coach_Training__c</fullName>
        <label>2016 Knowledge Coach Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Knowledge_Tools_Expiration_Date__c</fullName>
        <label>2016 Knowledge Tools Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Knowledge_Tools_Software__c</fullName>
        <label>2016 Knowledge Tools Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Knowledge_Tools_Total__c</fullName>
        <label>2016 Knowledge Tools Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Knowledge_Tools_Training__c</fullName>
        <label>2016 Knowledge Tools Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Org_PF_Total__c</fullName>
        <label>2016 Org/PF Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Outsource_Total__c</fullName>
        <label>2016 Outsource Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_PFX_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2016 PFX Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2016_Partnership_ELF__c</fullName>
        <label>2016 Partnership ELF</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Portal_Expiration_Date__c</fullName>
        <label>2016 Portal Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Portal_Software__c</fullName>
        <label>2016 Portal Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Portal_Total__c</fullName>
        <label>2016 Portal Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Portal_Training__c</fullName>
        <label>2016 Portal Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Practice_Expiration_Date__c</fullName>
        <label>2016 Practice Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Practice_Management_Exp_Date__c</fullName>
        <label>2016 Practice Management Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Practice_Management_Software__c</fullName>
        <label>2016 Practice Management Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Practice_Management_Total__c</fullName>
        <label>2016 Practice Management Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Practice_Management_Training__c</fullName>
        <label>2016 Practice Management Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Practice_Software__c</fullName>
        <label>2016 Practice Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Practice_Total__c</fullName>
        <label>2016 Practice Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Practice_Training__c</fullName>
        <label>2016 Practice Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Proforma_Amount__c</fullName>
        <label>2016 Proforma Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Proforma_Count__c</fullName>
        <label>2016 Proforma Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Renewal_Platform__c</fullName>
        <label>2016 Renewal Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pfx</fullName>
                </value>
                <value>
                    <fullName>Axcess</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2016_S_Corporation_ELF__c</fullName>
        <label>2016 S Corporation ELF</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Scan_Expiration_Date__c</fullName>
        <label>2016 Scan Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Scan_SaaS_Expiration_Date__c</fullName>
        <label>2016 Scan SaaS Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Scan_SaaS_Software__c</fullName>
        <label>2016 Scan SaaS Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Scan_SaaS_Total__c</fullName>
        <label>2016 Scan SaaS Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Scan_SaaS_Training__c</fullName>
        <label>2016 Scan SaaS Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Scan_Software__c</fullName>
        <label>2016 Scan Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Scan_Total__c</fullName>
        <label>2016 Scan Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Scan_Training__c</fullName>
        <label>2016 Scan Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_State_Specialty_ELF_Count__c</fullName>
        <label>2016 State Specialty ELF Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_State_Specialty_Ext_Count__c</fullName>
        <label>2016 State Specialty Ext Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Tax_Authorizations__c</fullName>
        <label>2016 Tax Authorizations</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Tax_Expiration_Date__c</fullName>
        <label>2016 Tax Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Tax_Notebook_Amount__c</fullName>
        <label>2016 Tax Notebook Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Tax_Notebook_Count__c</fullName>
        <label>2016 Tax Notebook Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016_Tax_Software_Revenue__c</fullName>
        <label>2016 Tax Software Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Tax_Software_Total__c</fullName>
        <formula>X2016_Axcess_Tax_Software__c  +  X2016_Tax_Software_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2016 Tax Software Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Tax_Software__c</fullName>
        <label>2016 Tax Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Tax_Total__c</fullName>
        <label>2016 Tax Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Tax_Training__c</fullName>
        <label>2016 Tax Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Trial_Balance_Expiration_Date__c</fullName>
        <label>2016 Trial Balance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2016_Trial_Balance_Software__c</fullName>
        <label>2016 Trial Balance Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Trial_Balance_Total__c</fullName>
        <label>2016 Trial Balance Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>